<resources>
    <string name="config_drawerDefaultTransitionEffect">Standard</string>
    <string name="config_workspaceDefaultTransitionEffect">Standard</string>
    <string name="application_name">K Theme</string>
    <string name="application_copyright">Copyright © Konka Group 2014</string>
    <string name="application_version">V2.0.0</string>
    <string name="versionFormatter">%1$s Build %2$d</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name">folder</string>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_dismiss">Cancel</string>
    <string name="folder">folder</string>
    <string name="app_upgrade">Upgrade Apps</string>
    <string name="system_upgrade">Upgrade TV</string>
    <string name="upgrade_hint">Regulaly updates your apps and system to newest version.</string>
    <string name="upgrade_detail">Details</string>
    <string name="app_available">%1$d App%2$s can be upgrade</string>
    <string name="system_available">TV can be upgrade to %1$s</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="menu">Menu</string>
    <string name="widget_dims_format">%1$d x %2$d</string>
    <string name="external_drop_widget_pick_format">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item onto this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="out_of_space">No more room on the screen.</string>
    <string name="not_allowed_add">Not allowed adding object on default Home screen.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"%s\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"%s\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"%s\" already exists.</string>
    <string name="shortcut_install_failed">Shortcut \"%s\" can not be installed.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="cancel_target_label">Cancel</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Manage apps</string>
    <string name="menu_market">Market</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System settings</string>
    <string name="menu_preferences">Trebuchet settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_apps_sort_title">Name</string>
    <string name="menu_apps_sort_install_date">Install Date</string>
    <string name="help_url" />
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an app to remove shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an app to read the settings and shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an app to change the settings and shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Workspace %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here.</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="all_apps_sort_cling_title">Sort your apps</string>
    <string name="all_apps_sort_cling_add_item">Touch &amp; hold the Apps tab to select your sort mode</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="folder_cling_create_folder">To make a new folder on your Home screen, stack one app on top of another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="folder_opened">Folder opened, %1$d by %2$d</string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to commit rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to %1$s</string>
    <string name="folder_name_format">Folder: %1$s</string>
    <string name="preferences_title">Preferences</string>
    <string name="preferences_interface_title">Interface</string>
    <string name="preferences_application_title">Application</string>
    <string name="preferences_interface_homescreen_title">Homescreen</string>
    <string name="preferences_interface_homescreen_general_category">General</string>
    <string name="preferences_interface_homescreen_general_screens_title">Homescreens</string>
    <string name="preferences_interface_homescreen_general_screens_summary">Number of screens on the homescreen</string>
    <string name="preferences_interface_homescreen_general_default_screen_title">Default screen</string>
    <string name="preferences_interface_homescreen_general_default_screen_summary">Choose the default homescreen</string>
    <string name="preferences_interface_homescreen_general_grid_title">Grid Size</string>
    <string name="preferences_interface_homescreen_general_grid_summary">Choose the number of rows/columns on the homescreen</string>
    <string name="preferences_interface_homescreen_general_grid_rows_title">Rows</string>
    <string name="preferences_interface_homescreen_general_grid_columns_title">Columns</string>
    <string name="preferences_interface_homescreen_general_screen_padding_vertical_title">Vertical Padding</string>
    <string name="preferences_interface_homescreen_general_screen_padding_vertical_summary">Extra vertical spacing on the homescreen</string>
    <string name="preferences_interface_homescreen_general_screen_padding_horizontal_title">Horizontal Padding</string>
    <string name="preferences_interface_homescreen_general_screen_padding_horizontal_summary">Extra horizontal spacing on the homescreen</string>
    <string name="preferences_interface_homescreen_general_search_title">Search bar</string>
    <string name="preferences_interface_homescreen_general_search_summary">Enable persistent search bar</string>
    <string name="preferences_interface_homescreen_general_resize_any_widget_title">Resize any widget</string>
    <string name="preferences_interface_homescreen_general_resize_any_widget_summary">Allow resizing of widgets that normally aren\'t resizeable</string>
    <string name="preferences_interface_homescreen_general_hide_icon_labels_title">Hide icon labels</string>
    <string name="preferences_interface_homescreen_general_hide_icon_labels_summary">Hide homescreen icon labels</string>
    <string name="preferences_interface_homescreen_scrolling_category">Scrolling</string>
    <string name="preferences_interface_homescreen_scrolling_transition_effect_title">Transition effect</string>
    <string name="preferences_interface_homescreen_scrolling_transition_effect_summary">Scrolling effect when scrolling homescreens</string>
    <string name="preferences_interface_homescreen_scrolling_fade_adjacent_screens_title">Fade side pages</string>
    <string name="preferences_interface_homescreen_scrolling_fade_adjacent_screens_summary">Fade the side pages when scrolling homescreens</string>
    <string name="preferences_interface_homescreen_scrolling_scroll_wallpaper_title">Scroll wallpaper</string>
    <string name="preferences_interface_homescreen_scrolling_scroll_wallpaper_summary">Scroll wallpaper when scrolling homescreens</string>
    <string name="preferences_interface_homescreen_indicator_category">Indicator</string>
    <string name="preferences_interface_homescreen_indicator_enable_title">Show page indicator</string>
    <string name="preferences_interface_homescreen_indicator_enable_summary">Show current page indicator at the bottom of the screen</string>
    <string name="preferences_interface_homescreen_indicator_fade_title">Fade indicator</string>
    <string name="lock_dialog_confirm">Confirm</string>
    <string name="lock_dialog_cancel">Cancel</string>
    <string name="lock_dialog_hint">Are you sure to logout current account?</string>
    <string name="system_setting">System Settings</string>
    <string name="system_feedback">Summit Feedback</string>
    <string name="system_help">Help</string>
    <string name="search">Search</string>
    <string name="search_input_hint">Please input key words</string>
    <string name="hotwords_got_failed">Hot words got failed; click here to </string>
    <string name="hotwords_get_again">try it again</string>
</resources>