<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:launcher="http://schemas.android.com/apk/res/com.konka.ios7launcher" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="24sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10sp" android:layout_marginTop="20dp" android:text="@string/lock_dialog_hint"/>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30sp">
        <Button android:textSize="30sp" android:textColor="@drawable/lock_view_btn_test_colors" android:id="@+id/lock_confirm" android:background="@drawable/lock_view_btns" android:paddingLeft="30sp" android:paddingRight="30dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30sp" android:text="@string/lock_dialog_confirm"/>
        <Button android:textSize="30sp" android:textColor="@drawable/lock_view_btn_test_colors" android:id="@+id/lock_cancel" android:background="@drawable/lock_view_btns" android:paddingLeft="30sp" android:paddingRight="30dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30sp" android:layout_marginRight="30sp" android:text="@string/lock_dialog_cancel"/>
    </LinearLayout>
</LinearLayout>
