<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:launcher="http://schemas.android.com/apk/res/com.konka.ios7launcher" android:orientation="vertical" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textSize="20sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/popup_menu_system_settings" android:background="@drawable/popup_menu_item_bg" android:paddingLeft="20dp" android:focusable="true" android:clickable="true" android:layout_width="160dp" android:layout_height="48dp" android:text="@string/system_setting" android:onClick="onClickSettingItem"/>
    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/separate_line" android:scaleType="fitXY"/>
    <TextView android:textSize="20sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/popup_menu_system_feedback" android:background="@drawable/popup_menu_item_bg" android:paddingLeft="20dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/system_feedback"/>
    <TextView android:textSize="20sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/popup_menu_system_help" android:background="@drawable/popup_menu_item_bg" android:paddingLeft="20dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/system_help"/>
</LinearLayout>
